# movies

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  skills-lock.json
.github/: copilot-instructions.md
back-end/app/: main.py
back-end/app/api/: dependencies.py  router.py
back-end/app/core/: config.py  database.py  limiter.py
back-end/app/repositories/: graph_data_repository.py  items_found_repository.py  query_params_repository.py  title_repository.py
back-end/app/schemas/: common.py  filter_params.py  graph_data.py  items_found.py  title.py
back-end/app/services/: graph_data_service.py  items_found_service.py  query_options_service.py  title_service.py
back-end/data/: imdb.duckdb.wal
back-end/tests/: test_filter_params.py  test_graph_data.py  test_items_found.py
data/: chroma_seed.sqlite
front-end/: index.html  package.json  tsconfig.app.json  vite.config.ts
front-end/src/: App.tsx  index.css
front-end/src/hooks/: useFilterOptions.ts  useGraphData.ts  useItemsFound.ts
front-end/src/lib/: utils.ts
scripts/: backup_snapshots.py  neo4j_seed.py
scripts/chroma_seed/: chroma_writer.py  config.py  duckdb_reader.py  llm_client.py  main.py  models.py  progress.py  sqlite_store.py
scripts/tests/: test_backup_snapshots.py  test_chroma_seed.py
specs/back-end/: filter_options.md  graph_data.md  items_found_api.md
specs/data_seeding/: chromadb_seed.md  neo4j_seed.md
specs/front-end/: filter_params.md  graph_visualization.md
specs/patterns/front-end/: README.md  custom_http_hook.md
(+8 files in other folders)
