[project]
name = "movies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.0.20",
    "duckdb",
    "fastapi[standard]>=0.135.3",
    "granian>=2.7.3",
    "neo4j>=5.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv",
    "slowapi>=0.1.9",
    "tqdm",
    "vllm>=0.6.0",
]
